--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <script src="/freecdn-loader.min.js"></script>
   <meta charset="UTF-8">
-  <title>非官方中文 Wiki</title>
+  <title>蓬松科技 非官方中文 Wiki</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="非官方中文 Wiki">
+  <meta name="description" content="FluffyMachines 蓬松科技 非官方中文 Wiki">
   <meta name="author" content="ybw0014">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://gzassets.cn/fonts/AlibabaPuHuiTi.css">
@@ -16,8 +16,8 @@
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
-      name: 'Wiki',
-      repo: '', 
+      name: 'FluffyMachines Wiki',
+      repo: 'SlimefunGuguProject/FluffyMachines-Wiki', 
       basePath: '/pages/',
       homepage: 'Home.md',
       auto2top: true,
